--- a/exec.html
+++ b/exec.html
@@ -47,7 +47,7 @@
                 <a class="dropdown-item" href="./membership.html"><span class="fa fa-address-card-o" aria-hidden="true"></span> Membership</a>
               </div>
             </li>
-            <li class="nav-item.active"><a class="nav-link" href="#"> <span class="fa fa-id-card-o" aria-hidden="true"></span> Exec.Commitee</a></li>
+            <li class="nav-link.active"><a class="nav-link" href="#"> <span class="fa fa-id-card-o" aria-hidden="true"></span> Exec.Commitee</a></li>
             <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
             
           </ul>
